--- a/functional_test/pom.xml
+++ b/functional_test/pom.xml
@@ -7,18 +7,18 @@
    <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
-        <version>3.7.1</version>
+        <version>3.8.1</version>
     </dependency> 
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
-      <version>6.11</version>
+      <version>6.13.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
     <groupId>io.appium</groupId>
     <artifactId>java-client</artifactId>
-    <version>5.0.4</version>
+    <version>6.0.0-BETA2</version>
     </dependency>
     <dependency>
   <groupId>org.apache.maven.plugins</groupId>
