--- a/functional_test/src/main/java/com/capabilities/DesiredCapabilities.properties
+++ b/functional_test/src/main/java/com/capabilities/DesiredCapabilities.properties
@@ -1,5 +1,5 @@
 # update the UDID number as per mobile UDID
-UDID_number = HKL3CTBA
+UDID_number = 2e2590c7
 # 320857778bba5171 for Samsung Galaxy S5
 # EBAZFG355780 for Samsung Galaxy J5
 # emulator-5554 for emulator
