--- a/functional_test/src/main/java/com/capabilities/DesiredCapabilities.properties
+++ b/functional_test/src/main/java/com/capabilities/DesiredCapabilities.properties
@@ -1,6 +1,8 @@
 # update the UDID number as per mobile UDID
 UDID_number = 0123456789ABCDEF
 # 320857778bba5171 for Samsung Galaxy S5
-# 2e2590c7 for Samsung Galaxy J5
+# EBAZFG355780 for Samsung Galaxy J5
+# HKL3CTBA for lenovo
+# 320857778bba5171 for Digicel 1
+# 0123456789ABCDEF for Digicel 2
 # emulator-5554 for emulator
-# HKL3CTBA for Lenovo
