--- a/functional_test/pom.xml
+++ b/functional_test/pom.xml
@@ -3,51 +3,67 @@
   <groupId>mobileapp_grpid</groupId>
   <artifactId>mobileapp_afid</artifactId>
   <version>0.0.1-SNAPSHOT</version>
- <dependencies>
-   <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-java</artifactId>
-        <version>3.9.1</version>
-    </dependency> 
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>6.14.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    <groupId>io.appium</groupId>
-    <artifactId>java-client</artifactId>
-    <version>6.0.0-BETA2</version>
-    </dependency>
-    <dependency>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-surefire-report-plugin</artifactId>
-  <version>2.20.1</version>
-  <type>maven-plugin</type>
-</dependency>
-  </dependencies>
-  <build>
-  <plugins>
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-compiler-plugin</artifactId>
-      <version>3.7.0</version>
-      <configuration>
-      <source>1.8</source>
-      <target>1.8</target>
-      </configuration>
-    </plugin>
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-surefire-plugin</artifactId>
-      <version>2.20.1</version>
-    <configuration>
-      <suiteXmlFiles>
-        <suiteXmlFile>suite.xml</suiteXmlFile>
-      </suiteXmlFiles>
-    </configuration>
-    </plugin>
-  </plugins>
-  </build>
+ 	<dependencies>
+ 		<dependency>
+        	<groupId>org.seleniumhq.selenium</groupId>
+        	<artifactId>selenium-java</artifactId>
+	        <version>3.9.1</version>
+	    </dependency> 
+    	<dependency>
+      		<groupId>org.testng</groupId>
+      		<artifactId>testng</artifactId>
+      		<version>6.14.2</version>
+      		<scope>test</scope>
+    	</dependency>
+    	<dependency>
+    		<groupId>io.appium</groupId>
+    		<artifactId>java-client</artifactId>
+    		<version>6.0.0-BETA3</version>
+    	</dependency>
+    	<dependency>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-surefire-report-plugin</artifactId>
+  			<version>2.20.1</version>
+  			<type>maven-plugin</type>
+		</dependency>
+		<dependency>
+    		<groupId>com.aventstack</groupId>
+    		<artifactId>extentreports</artifactId>
+    		<version>3.1.3</version>
+    		<scope>provided</scope>
+		</dependency>
+		<dependency>
+    		<groupId>org.mongodb</groupId>
+    		<artifactId>bson</artifactId>
+    		<version>3.6.3</version>
+    	</dependency>
+    	<dependency>
+    		<groupId>org.freemarker</groupId>
+    		<artifactId>freemarker</artifactId>
+    		<version>2.3.23</version>
+		</dependency>
+	</dependencies>
+  	<build>
+  	<plugins>
+    	<plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-compiler-plugin</artifactId>
+	      <version>3.7.0</version>
+	      	<configuration>
+	      		<source>1.8</source>
+		      	<target>1.8</target>
+		    </configuration>
+    	</plugin>
+    	<plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-surefire-plugin</artifactId>
+	      <version>2.20.1</version>
+    		<configuration>
+      			<suiteXmlFiles>
+        			<suiteXmlFile>suite.xml</suiteXmlFile>
+      			</suiteXmlFiles>
+    		</configuration>
+    	</plugin>
+  	</plugins>
+  	</build>
 </project>
