Latest code for Kratos 582 and previous story with some Ui/UX changes.

--- a/functional_test/src/main/java/com/capabilities/DesiredCapabilities.properties
+++ b/functional_test/src/main/java/com/capabilities/DesiredCapabilities.properties
@@ -2,8 +2,8 @@
 UDID_number = 0123456789ABCDEF
 # 320857778bba5171 for Samsung Galaxy S5
 # EBAZFG355780 for Samsung Galaxy J5
-# HKL3CTBA for lenovo
-# 320857778bba5171 for Digicel 2
-# 0123456789ABCDEF for Digicel 1
+# 4QBDU17628001066 for Huawei
+# 320857778bba5171 for Digicel 1
+# 0123456789ABCDEF for Digicel 2
 # LFYDLJEYUSTKZLJF for TCL
 # emulator-5554 for emulator
