--- a/functional_test/src/main/java/com/capabilities/DesiredCapabilities.properties
+++ b/functional_test/src/main/java/com/capabilities/DesiredCapabilities.properties
@@ -1,5 +1,5 @@
 # update the UDID number as per mobile UDID
-UDID_number = 0123456789ABCDEF
+UDID_number = 4QBDU17628001066
 # 320857778bba5171 for Samsung Galaxy S5
 # EBAZFG355780 for Samsung Galaxy J5
 # 4QBDU17628001066 for Huawei
