--- a/functional_test/pom.xml
+++ b/functional_test/pom.xml
@@ -18,7 +18,7 @@
     	<dependency>
     		<groupId>io.appium</groupId>
     		<artifactId>java-client</artifactId>
-    		<version>6.0.0-BETA4</version>
+    		<version>5.0.4</version>
     	</dependency>
     	<dependency>
   			<groupId>org.apache.maven.plugins</groupId>
