--- a/functional_test/pom.xml
+++ b/functional_test/pom.xml
@@ -7,18 +7,18 @@
  		<dependency>
         	<groupId>org.seleniumhq.selenium</groupId>
         	<artifactId>selenium-java</artifactId>
-	        <version>3.10.0</version>
+	        <version>3.11.0</version>
 	    </dependency> 
     	<dependency>
       		<groupId>org.testng</groupId>
       		<artifactId>testng</artifactId>
-      		<version>6.14.2</version>
+      		<version>6.14.3</version>
       		<scope>test</scope>
     	</dependency>
     	<dependency>
     		<groupId>io.appium</groupId>
     		<artifactId>java-client</artifactId>
-    		<version>5.0.4</version>
+    		<version>6.0.0-BETA4</version>
     	</dependency>
     	<dependency>
   			<groupId>org.apache.maven.plugins</groupId>
@@ -29,7 +29,7 @@
 		<dependency>
     		<groupId>com.aventstack</groupId>
     		<artifactId>extentreports</artifactId>
-    		<version>3.1.3</version>
+    		<version>3.1.5</version>
     		<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -40,7 +40,7 @@
     	<dependency>
     		<groupId>org.freemarker</groupId>
     		<artifactId>freemarker</artifactId>
-    		<version>2.3.23</version>
+    		<version>2.3.28</version>
 		</dependency>
 	</dependencies>
   	<build>
