--- a/functional_test/src/main/java/com/capabilities/DesiredCapabilities.properties
+++ b/functional_test/src/main/java/com/capabilities/DesiredCapabilities.properties
@@ -1,10 +1,12 @@
-# update the UDID number and Device name as per mobile
-UDID_number = 0123456789ABCDEF
-Device_name = Digicel 2
+# update the UDID number, Device name as per mobile/ Emulator and update AVD name as per Emulator
+# UDID_number = 4QBDU17628001066
+Device_name = emulator-5554
+AVD_name = Nexus_5X_API_27
+
 # 320857778bba5171 for Samsung Galaxy S5
 # EBAZFG355780 for Samsung Galaxy J5
 # 4QBDU17628001066 for Huawei
 # 320857778bba5171 for Digicel 1
 # 0123456789ABCDEF for Digicel 2
 # LFYDLJEYUSTKZLJF for TCL
-# emulator-5554 for emulator
+# emulator-5554 for Emulator
