--- a/functional_test/pom.xml
+++ b/functional_test/pom.xml
@@ -7,18 +7,17 @@
  		<dependency>
         	<groupId>org.seleniumhq.selenium</groupId>
         	<artifactId>selenium-java</artifactId>
-	        <version>3.11.0</version>
+	        <version>3.13.0</version>
 	    </dependency> 
     	<dependency>
       		<groupId>org.testng</groupId>
       		<artifactId>testng</artifactId>
-      		<version>6.14.3</version>
-      		<scope>test</scope>
+      		<version>6.14.2</version>
     	</dependency>
     	<dependency>
     		<groupId>io.appium</groupId>
     		<artifactId>java-client</artifactId>
-    		<version>6.0.0-BETA5</version>
+    		<version>6.1.0</version>
     	</dependency>
     	<dependency>
   			<groupId>org.apache.maven.plugins</groupId>
@@ -27,15 +26,19 @@
   			<type>maven-plugin</type>
 		</dependency>
 		<dependency>
+   			<groupId>org.apache.xmlbeans</groupId>
+    		<artifactId>xmlbeans-xpath</artifactId>
+    		<version>2.3.0</version>
+		</dependency>
+		<dependency>
     		<groupId>com.aventstack</groupId>
     		<artifactId>extentreports</artifactId>
     		<version>3.1.5</version>
-    		<scope>provided</scope>
 		</dependency>
 		<dependency>
     		<groupId>org.mongodb</groupId>
     		<artifactId>bson</artifactId>
-    		<version>3.8.0-beta1</version>
+    		<version>3.8.0-beta3</version>
     	</dependency>
     	<dependency>
     		<groupId>org.freemarker</groupId>
@@ -52,7 +55,15 @@
     		<artifactId>selendroid-server</artifactId>
    			<version>0.17.0</version>
 		</dependency>
-	</dependencies>
+
+<dependency>
+    <groupId>com.google.android</groupId>
+    <artifactId>android-test</artifactId>
+    <version>4.1.1.4</version>
+    <scope>provided</scope>
+</dependency>
+
+		</dependencies>
   	<build>
   	<plugins>
     	<plugin>
@@ -62,6 +73,7 @@
 	      	<configuration>
 	      		<source>1.8</source>
 		      	<target>1.8</target>
+		      	<encoding>UTF-8</encoding>
 		    </configuration>
     	</plugin>
     	<plugin>
