--- a/e2e_test_android/pom.xml
+++ b/e2e_test_android/pom.xml
@@ -4,11 +4,11 @@
   <artifactId>mobileapp_e2e_android_afid</artifactId>
   <version>0.0.1-SNAPSHOT</version>
  	<dependencies>
-		<dependency>
-		    <groupId>org.seleniumhq.selenium</groupId>
-		    <artifactId>selenium-java</artifactId>
-		    <version>3.13.0</version>
-		</dependency> 
+ 		<dependency>
+        	<groupId>org.seleniumhq.selenium</groupId>
+        	<artifactId>selenium-java</artifactId>
+	        <version>3.13.0</version>
+	    </dependency> 
     	<dependency>
       		<groupId>org.testng</groupId>
       		<artifactId>testng</artifactId>
@@ -20,12 +20,60 @@
     		<version>6.1.0</version>
     	</dependency>
     	<dependency>
+    		<groupId>com.android.support.test.uiautomator</groupId>
+    		<artifactId>uiautomator-v18</artifactId>
+    		<version>2.1.3</version>
+		</dependency>
+		<dependency>
+    <groupId>android.test.uiautomator</groupId>
+    <artifactId>uiautomator</artifactId>
+    <version>4.4.2_r4</version>
+</dependency>
+    	<dependency>
   			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-surefire-report-plugin</artifactId>
   			<version>2.21.0</version>
   			<type>maven-plugin</type>
 		</dependency>
-	</dependencies>
+		<dependency>
+   			<groupId>org.apache.xmlbeans</groupId>
+    		<artifactId>xmlbeans-xpath</artifactId>
+    		<version>2.3.0</version>
+		</dependency>
+		<dependency>
+    		<groupId>com.aventstack</groupId>
+    		<artifactId>extentreports</artifactId>
+    		<version>3.1.5</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.mongodb</groupId>
+    		<artifactId>bson</artifactId>
+    		<version>3.8.0-beta3</version>
+    	</dependency>
+    	<dependency>
+    		<groupId>org.freemarker</groupId>
+    		<artifactId>freemarker</artifactId>
+    		<version>2.3.28</version>
+		</dependency>
+		<dependency>
+  			<groupId>com.beust</groupId>
+  			<artifactId>jcommander</artifactId>
+  			<version>1.72</version>
+		</dependency>
+		<dependency>
+    		<groupId>io.selendroid</groupId>
+    		<artifactId>selendroid-server</artifactId>
+   			<version>0.17.0</version>
+		</dependency>
+
+<dependency>
+    <groupId>com.google.android</groupId>
+    <artifactId>android-test</artifactId>
+    <version>4.1.1.4</version>
+    <scope>provided</scope>
+</dependency>
+
+		</dependencies>
   	<build>
   	<plugins>
     	<plugin>
